// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render HitsStats correctly when no hits 1`] = `
<div
  data-qa="hits-stats"
>
  <div
    data-qa="info"
  >
    Sorry, no hits
  </div>
</div>
`;

exports[`should render HitsStats correctly with hits  1`] = `
<div
  data-qa="hits-stats"
>
  <div
    data-qa="info"
  >
    Search gave 100 hit(s) among datasets, 0 hit(s) among APIs, 100 hit(s) among concepts 0 hit(s) among information models
  </div>
</div>
`;
